deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documentserver
spec:
  selector:
    app: documentserver
  ports:
  - port: 80
    targetPort: 80
