deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: documentserver
  labels:
    name: documentserver
spec:
  rules:
  - host: poufdoc-server.lab.sspcloud.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: documentserver
            port: 
              number: 80
